--- a/package.json
+++ b/package.json
@@ -3,12 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-server": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "jquery": "^3.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
+    "react-icons": "^4.8.0",
+    "react-masonry-css": "^1.0.16",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.11.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.31.1",
+    "typescript": "^5.0.4",
+    "victory": "^36.6.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
